--- a/404.md
+++ b/404.md
@@ -2,6 +2,10 @@
 title: 404
 description: "Sorry, this page is not available"
 noindex: true
+
+otherlang:
+   eng: /
+   rus: http://www.conemu.ru/
 ---
 
 {% comment %} ‘UTF-8’ {% endcomment %}
