--- a/_posts/2015-11-29-Build-151129.md
+++ b/_posts/2015-11-29-Build-151129.md
@@ -4,5 +4,5 @@ build: 151129
 
 * ANSI: Implement (xterm) codes to save `ESC 7` and restore `ESC 8` cursor position.
 * ANSI: Sequences `ESC ] ... ESC \` were not processed properly in some cases.
-* cygwin/msys connector v0.4
-* Warning fixes (from Michael Lukashov)
+* [cygwin/msys connector v0.4](https://github.com/Maximus5/cygwin-connector).
+* Warning fixes (from Michael Lukashov).
