--- a/_posts/2016-02-22-Build-160222.md
+++ b/_posts/2016-02-22-Build-160222.md
@@ -9,6 +9,7 @@ build: 160222
 * Let `-new_console:c1` consoles stay open silently even on Esc/Enter.
 
   When all processes in console are finished:
+
   * ConEmu does not close the console automatically;
   * Confirmation message is not written to console;
   * All keypresses are ignored.
@@ -16,4 +17,4 @@ build: 160222
   So, user may either close console via ConEmu interface
   (kill hotkeys or close menu items), or parent process
   (when ConEmu is working in the ‘Inside’ mode) may close
-  the console via GuiMacro `Close(0,1)`.
+  the console via [GuiMacro](/en/GuiMacro.html) `Close(0,1)`.
