ConEmu 161009a What's New

--- a/_posts/2016-10-09-Build-161009.md
+++ b/_posts/2016-10-09-Build-161009.md
@@ -1,7 +1,13 @@
 ---
-build: 161009
+build: 161009a
 stage: stable
 ---
+
+### 161009a
+
+* gh-896: Fix regression: cygwin/msys process creation was broken.
+
+### 161009
 
 * GuiMacro: Allow {Task} arguments in `Shell` function.
 * Reuse previous palette on Unfasten/Re-Attach.
